--- a/src/theme/header.css
+++ b/src/theme/header.css
@@ -5,3 +5,7 @@ ion-header[class*="header"] ion-toolbar[class*="in-toolbar"] {
 ion-header[class*="header"]::after {
     background-image: none;
 }
+
+ion-header ion-toolbar ion-button {
+    --box-shadow: none;
+}
