--- a/src/pages/Tab1.css
+++ b/src/pages/Tab1.css
@@ -1,10 +1,22 @@
-.welcome-card .welcome-card-container {
-  height: 35vh;
-  overflow: hidden;
-  background: var(--ion-color-medium);
+ion-card.welcome-card {
+  --background: var(--ion-color-secondary);
+  --color: white;
 }
 
-.welcome-card .welcome-card-container img {
+ion-card.welcome-card ion-card-subtitle {
+  color: var(--ion-color-tertiary);
+}
+
+ion-card.welcome-card ion-card-title {
+  color: white;
+}
+
+ion-card.welcome-card .welcome-card-container {
+  height: 35vh;
+  overflow: hidden;
+}
+
+ion-card.welcome-card .welcome-card-container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
